# platform-config

./: Cargo.toml  LICENSE
config/: default.toml
examples/: example.rs
platform-config-derive/: Cargo.toml
platform-config-derive/src/: lib.rs
src/: lib.rs
